2006-08-24  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	Don't override existing methods, prefixing the generated 
	method names with 'osa_' when necessary. When mapping the
	commands, filter the classes to only take the oldest ones in
	the hierarchy.

2006-08-23  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	When converting to alias or file types, provide a 'furl' 
	descriptor instead of an 'alis' one, as we don't have a way
	to create an alias for a file that does not exist yet.

2006-08-22  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb, src/rbosa.c:
	- Added support for 'reco' types, that are now translated into
	  Ruby Hash objects ;
	- Convert 'type' types to real generated classes (if possible).

2006-08-22  Vincent Isambart  <vincent.isambart@gmail.com>

	* src/lib/rbosa.rb, src/rbosa.c:
	Set the @app instance variable to self for application instances,
	and cleanup the generated methods code logic to always use it.

2006-08-22  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	Handle 'file' element types as aliases.

	* src/rbosa_sdef.c:
	- Don't try to get the app name when OSA.app_with_name() was called,
	  as we already have it ;
	- When trying to get the app name, if CFBundleName does not exist in
	  the Info.plist file, try for CFBundleExecutable.

2006-08-22  Vincent Isambart  <vincent.isambart@gmail.com>

	* src/lib/rbosa.rb:
	- Map '-', '/' and '.' to underscores, and '&' to 'and' when rubyfy'ing 
	  strings (Finder and QuickTime do have these characters) ; 
	- Ignore commands whose names contain 'NOT AVAILABLE' (Finder on Tiger 
	  has some) ; 
	- When creating classes, make sure we iterate on all elements (as some
	  classes can be defined within multiple suites) ;
	- Use Module#const_set instead of costly evals to define constants.

	* sample/QT_playall.rb:
	Added new sample.

2006-08-22  Laurent Sansonetti  <lsansonetti@apple.com>

	* AUTHORS:
	Added.
